--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>SeregaPop</title>
         <meta charset="UTF-8"/>
@@ -31,9 +31,9 @@
     <p>Абсолютно <strong style="color: red;">ничем.</strong></p>
     <p>Да-да, вы не ошиблись, мы никак не отличаемся от других студий, но если вы хотите чтобы ваш трек либо сведение делали с душой, ответственностью и <em>ГАРАНТИЕЙ</em>, вы попали именно туда, куда вам нужно. </p>
 </div>
-<div>
+<figure>
         <img src="https://github.com/SchoolNumberOne/info/blob/main/Work.jpg" width="600px" height="600px" class="work">
-</div>
+</figure>
 <h4 class="h4">Как мы работаем?</h4>
 <div class="text_down2">
     <p>Мы работаем по следующему принципу:</p>
