--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>Да-да, вы не ошиблись, мы никак не отличаемся от других студий, но если вы хотите чтобы ваш трек либо сведение делали с душой, ответственностью и <em>ГАРАНТИЕЙ</em>, вы попали именно туда, куда вам нужно. </p>
 </div>
 <figure>
-        <img src="https://github.com/SchoolNumberOne/info/blob/main/Work.jpg" width="600px" height="600px" class="work">
+        <img src="/Work.jpg" width="600px" height="600px" class="work">
 </figure>
 <h4 class="h4">Как мы работаем?</h4>
 <div class="text_down2">
